# DIT-Transfer-Tools

./: .coverage  .gitignore  CHANGELOG.md  CMakeLists.txt  DIT  DIT-Transfer-Tools  DIT.pro  Dockerfile  LICENSE  Makefile  PROGRESS.md  README-DIT.md  README.md  build.bat  coverage.xml  main.cpp  main.moc  moc_AddTaskDialog.cpp  moc_DragDropList.cpp  moc_DriveMonitor.cpp  moc_ErrorManager.cpp  moc_HashManager.cpp  moc_LogsDockWidget.cpp  moc_MainWindow.cpp  moc_ParallelManager.cpp  moc_ProgressMonitor.cpp  moc_QueueManager.cpp  moc_SettingsManager.cpp  moc_TransferTask.cpp  presets.json  pyproject.toml  test.txt  test_hash.cpp  ui_MainWindow.h
.github/workflows/: appimage.yml  build.yml  macos-dmg.yml  publish-python.yml  pypi-cli.yml  python-test.yml  release.yml  windows-nsis.yml
build_cpp_tests/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  test_queuemanager
build_cpp_tests/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_cpp_tests/test_queuemanager_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
dit_transfer/: __init__.py  cli.py  gui.py  transfer.py  version.py
dit_transfer/gui/: __init__.py
docs/: ConfigManager.md  DriveMonitor.md  QueueManager.md  errorhandling.md
src/: AddTaskDialog.cpp  AddTaskDialog.h  AddTaskDialog.ui  ConfigManager.cpp  ConfigManager.h  DragDropList.cpp  DragDropList.h  DriveMonitor.cpp  DriveMonitor.h  ErrorManager.cpp  ErrorManager.h  FolderWatchdog.cpp  FolderWatchdog.h  HashManager.cpp  HashManager.h  LogsDockWidget.cpp  LogsDockWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_slots_rclone.cpp  NotificationManager.cpp  NotificationManager.h  ParallelManager.cpp  ParallelManager.h  PresetManager.cpp  PresetManager.h  PreviewScene.cpp  PreviewScene.h  ProgressMonitor.cpp  ProgressMonitor.h  ProgressTracker.cpp  ProgressTracker.h  Queue.h  QueueManager.cpp  QueueManager.h  RcloneRemoteDialog.cpp  RcloneRemoteDialog.h  Settings.cpp  Settings.h  (+14 more)
test_data/: test.txt
test_data/sub/: dir.txt
tests/: Makefile  moc_SettingsManager.cpp  test_addtask.cpp  test_avgs.cpp  test_configmanager.cpp  test_drivemonitor.cpp  test_drivemonitor_initial.cpp  test_drives.cpp  test_drives.moc  test_drives.pro  test_errorhandling.cpp  test_logs.cpp  test_logs.moc  test_logs.pro  test_multi_target.cpp  test_multi_target.pro  test_notify.cpp  test_notify.moc  test_notify.pro  test_presets.cpp  test_presets.pro  test_queuemanager.cpp  test_rclone  test_rclone.cpp  test_rclone.moc  test_rclone.pro  test_reconnect.cpp  test_settings.cpp  test_settings.moc  test_settings.pro  test_ui.cpp  test_ui_clarity.cpp  test_verify.cpp  test_verify.pro  ui_AddTaskDialog.h
tests/python/: mocks.py  test_cli.py  test_coverage.py  test_gui.py  test_transfer.py  test_transfer_missing.py  test_transfer_mocks.py  test_transfer_rclone.py  test_transfer_sftp.py  test_utils.py  test_version.py  utils.py
transfer_app/: build.bat  config.ini  main.cpp  transfer_log.txt
