[build-system]\nrequires = [\"hatchling\"]\nbuild-backend = \"hatchling.build\"\n\n[project]\nname = \"dit-transfer-tools\"\ndynamic = [\"version\"]\ndescription = \"DIT Transfer Tools\"\nreadme = \"README.md\"\nrequires-python = \">=3.12\"\nlicense = {text = \"MIT\"}\nauthors = [{name = \"OpenClaw Agent\", email = \"openclaw@workspace\"}]\ndependencies = [\n  \"click\",\n  \"paramiko\",\n  \"tqdm\",\n  \"cryptography\",\n]\n\n[project.optional-dependencies]\ndev = [\n  \"black\",\n  \"ruff\",\n]\n\n[project.scripts]\ndit-transfer = \"dit_transfer.cli:main\"\n\n[tool.hatch.version]\npath = \"dit_transfer/version.py\"