[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "dit-transfer-tools"
dynamic = [ "version" ]
description = "DIT Transfer Tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [ { name = "OpenClaw Agent", email = "openclaw@workspace" } ]
dependencies = [
  "click",
  "paramiko",
  "tqdm",
  "cryptography",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "mypy",
]

[project.scripts]
dit-transfer = "dit_transfer.cli:main"

[tool.hatch.version]
path = "dit_transfer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["dit_transfer"]