[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "dit-transfer-tools"
dynamic = [ "version" ]
description = "DIT Transfer Tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [ { name = "OpenClaw Agent", email = "openclaw@workspace" } ]
dependencies = [
  "click",
  "paramiko",
  "tqdm",
  "cryptography",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "pytest-mock",
]

[project.scripts]
dit-transfer = "dit_transfer.cli:cli"
dit-gui = "dit_transfer.gui:main"

[tool.hatch.version]
path = "dit_transfer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["dit_transfer"]

[tool.coverage.run]
omit = ["dit_transfer/gui/*"]

[tool.black]
target-version = ["py312"]

